--- a/styles/portfolio-2021-my-work-specific.css
+++ b/styles/portfolio-2021-my-work-specific.css
@@ -13,13 +13,13 @@
 }
 
 .hero-headline{
-  grid-column: 1/span 8;
+  grid-column: 1/span 7;
   grid-row: 1/span 1;
   align-self:flex-end;
 }
 
 .hero-copy{
-grid-column: 1/span 8;
+grid-column: 1/span 7;
 grid-row: 2/span 1;
 
 }
@@ -34,9 +34,9 @@ grid-row: 2/span 1;
 
 
 .hero button{
-grid-column: 1/span 3;
-grid-row: 3/span 1;
-margin-top: 50px;
+  grid-column: 1/span 3;
+  grid-row: 3/span 1;
+  margin-top:50px;
 }
 
 /* Mobile hero section */
@@ -150,7 +150,7 @@ margin-top: 50px;
   grid-row: 4/span 1;
 }
 
-/*
+
 .additional-case-studies-headline{
   grid-column: 1/span 12;
   grid-row:4;
@@ -304,48 +304,7 @@ margin-top: 50px;
 
 .card4 button:hover {
   border-style: none;
-} */
-
-.see-more-work{
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto auto auto;
-  grid-column: 1/span 12;
-  grid-row: 4;
-  margin-bottom: 50px;
-  background-color: #EBD7D0;
-  padding:50px;
-
-  }
-
-  .see-more-work-headline{
-    grid-column: 1/span 6;
-    grid-row:1;
-  }
-
-  .see-more-work-intro{
-    grid-column: 1/span 6;
-    grid-row:2;
-  }
-
-  .see-more-work-image{
-    grid-column: 7/span 6;
-    grid-row:1/span 3;
-    height:300px;
-    width:auto;
-  }
-
-  .see-more-work button{
-    grid-column: 1/span 6;
-    grid-row:3;
-    margin-top:20px;
-  }
-
-
-
-
-
+}
 
 /* Mobile work section */
 
@@ -413,47 +372,7 @@ margin-top: 50px;
     margin-top: 50px;
   }
 
-  .see-more-work{
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto auto auto;
-    grid-column: 1/span 4;
-    grid-row: 4;
-    margin-bottom: 50px;
-    background-color: #EBD7D0;
-    padding:25px;
-    text-align: center;
-
-    }
-
-    .see-more-work-headline{
-      grid-column: 1/span 4;
-      grid-row:1;
-    }
-
-    .see-more-work-intro{
-      grid-column: 1/span 4;
-      grid-row:3;
-    }
-
-    .see-more-work-image{
-      grid-column: 1/span 4;
-      grid-row:2;
-      height:auto;
-      width:100%;
-    }
-
-
-    .see-more-work button{
-      grid-column: 1/span 4;
-      grid-row:4;
-      margin-top:20px;
-      width:100%
-
-      }
-
-  /* .additional-case-studies-headline{
+  .additional-case-studies-headline{
     grid-column: 1/span 4;
     grid-row:4;
   }
@@ -611,7 +530,7 @@ margin-top: 50px;
 
   .card3 button:hover {
     border-style: none;
-  }*/
+  }
 
 }
 
