--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -173,7 +173,7 @@ grid-row: 3/span 1;
   grid-gap:20px;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows: auto auto auto auto auto auto auto;
-  max-width: 1366px;
+  /* max-width: 1366px; */
   margin: 0px;
   /* padding-left: 80px;
   padding-right: 80px; */
