--- a/styles/portfolio-2021-nih-specific.css
+++ b/styles/portfolio-2021-nih-specific.css
@@ -168,7 +168,7 @@ grid-row: 3/span 1;
 /* desktop overview settings */
 
 
-.floodlight-summary{
+.nih-summary{
   Display: grid;
   grid-gap:20px;
   grid-template-columns: repeat(12,1fr);
@@ -284,7 +284,7 @@ grid-row: 3/span 1;
 @media screen and (max-width: 768px){
 
 
-  .floodlight-summary{
+  .nih-summary{
     Display: grid;
     grid-gap:5px;
     grid-template-columns: repeat(4,1fr);
@@ -486,331 +486,305 @@ grid-row: 3/span 1;
   }
 
 
-  .documentation{
+  .content-audit-introduction{
     grid-column: 1/span 12;
     grid-row-start:2;
 
 
   }
 
-  .phase-1-introduction{
+  .content-audit-objectives-list{
     grid-column: 1/span 12;
     grid-row-start:3;
 
   }
 
-  .phase-1-functional-specifications-headline{
+  .content-audit-intro-close{
     grid-column: 1/span 12;
     grid-row-start:4;
-    text-align: center;
-    margin-top: 50px;
-
   }
 
-  .phase-1-functional-specifications{
+  .xml-sitemap-headline{
     grid-column: 1/span 12;
     grid-row-start:5;
-    text-align:center;
 
   }
 
-  .phase-1-functional-specifications-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
-  }
-
-  .phase-1-functional-anotations-headline{
+  .xml-sitemap{
     grid-column: 1/span 12;
     grid-row-start:6;
-    text-align: center;
-    margin-top: 50px;
-
   }
 
-  .phase-1-functional-anotations{
+  .xml-sitemap-image{
+    width:100%;
+  }
+
+  .excel-content-intro{
     grid-column: 1/span 12;
     grid-row-start:7;
-    text-align: center;
-
 
   }
 
-  .phase-1-functional-anotations-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
+  .content-snapshot-headline{
+    grid-column: 1/span 12;
+    grid-row-start:8;
+  }
+
+  .content-snapshot{
+    /* box-shadow: 0px 0px 19px -6px #000000; */
+    grid-column: 1/span 12;
+    grid-row-start:9;
+  }
+
+  .content-snapshot-image{
+    width:100%;
   }
 
   .phase-1-wireframes-headline{
     grid-column: 1/span 12;
-    grid-row-start:8;
+    grid-row-start:10;
     text-align: center;
     margin-top: 50px;
 
   }
 
-  .phase-1-wireframes{
-    grid-column: 1/span 12;
-    grid-row-start:9;
-    text-align: center;
-
-  }
-
-  .phase-1-wireframes-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
-  }
-
-  .phase-1-communication{
-    grid-column: 1/span 12;
-    grid-row-start:10;
-  }
-
-  .phase-1-infrastructure-headline{
+  .audit-navigation-headline{
     grid-column: 1/span 12;
     grid-row-start:11;
   }
 
-  .phase-1-infrastructure{
+  .audit-navigation-content{
     grid-column: 1/span 12;
     grid-row-start:12;
-
   }
 
-  .phase-1-sitemap-headline{
+  .navigation-audit-list{
     grid-column: 1/span 12;
     grid-row-start:13;
-    text-align: center;
-    margin-top: 50px;
   }
 
-  .phase-1-sitemap{
+  .content-navigation{
     grid-column: 1/span 12;
     grid-row-start:14;
-    text-align: center;
   }
 
-  .phase-1-sitemap-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
+  .content-navigation-image{
+    width:100%;
   }
 
-  .phase-1-full-layout-headline{
+  .audit-technology-abstracts-headline{
     grid-column: 1/span 12;
     grid-row-start:15;
-    text-align: center;
-    margin-top: 50px;
   }
 
-  .phase-1-full-layout{
+  .audit-technology-abstracts-content{
     grid-column: 1/span 12;
     grid-row-start:16;
-    text-align: center;
   }
 
-  .phase-1-full-layout-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
-  }
-
-  .updating-phase-1-headline{
+  .technology-abstract-audit-list{
     grid-column: 1/span 12;
     grid-row-start:17;
   }
 
-  .updating-phase-1{
+  .content-abstracts{
     grid-column: 1/span 12;
     grid-row-start:18;
   }
 
-  .phase-1-image-headline{
+  .content-abstracts-image{
+    width:100%;
+  }
+
+  .audit-technology-abstracts-indexes-headline{
     grid-column: 1/span 12;
     grid-row-start:19;
-    text-align: center;
-    margin-top: 50px;
   }
 
-  .phase-1-update{
+  .audit-technology-abstracts-indexes-content{
     grid-column: 1/span 12;
     grid-row-start:20;
-    text-align: center;
-
   }
 
-  .phase-1-update-image{
-    box-shadow: 0px 0px 19px -6px #000000;
-    width: 100%;
+  .technology-abstract-indexes-audit-filter-list{
+    grid-column: 1/span 12;
+    grid-row-start:21;
+  }
+
+  .technology-abstract-indexes-audit-list{
+    grid-column: 1/span 12;
+    grid-row-start:22;
+  }
+
+  .content-abstracts-indexes{
+    grid-column: 1/span 12;
+    grid-row-start:23;
+  }
+
+  .content-abstracts-indexes-image{
+    width:100%;
+  }
+
+  .audit-inventors-headline{
+    grid-column: 1/span 12;
+    grid-row-start:24;
+  }
+
+  .audit-inventors-content{
+    grid-column: 1/span 12;
+    grid-row-start:25;
+  }
+
+  .inventor-audit-list{
+    grid-column: 1/span 12;
+    grid-row-start:26;
+  }
+
+  .content-inventors{
+    grid-column: 1/span 12;
+    grid-row-start:27;
+  }
+
+  .content-inventors-image{
+    width:100%;
   }
 
 
-  /* Mobile Phase 1 Settings */
+
+  .audit-products-headline{
+    grid-column: 1/span 12;
+    grid-row-start:28;
+  }
+
+  .audit-products-content{
+    grid-column: 1/span 12;
+    grid-row-start:29;
+  }
+
+  .products-audit-list{
+    grid-column: 1/span 12;
+    grid-row-start:30;
+  }
+
+  .content-products{
+    grid-column: 1/span 12;
+    grid-row-start:31;
+  }
+
+  .content-products-image{
+    width:100%;
+  }
+
+  .audit-documents-headline{
+    grid-column: 1/span 12;
+    grid-row-start:32;
+  }
+
+  .audit-documents-content{
+    grid-column: 1/span 12;
+    grid-row-start:33;
+  }
+
+  .inventor-documents-list{
+    grid-column: 1/span 12;
+    grid-row-start:34;
+  }
+
+  .content-documents{
+    grid-column: 1/span 12;
+    grid-row-start:35;
+  }
+
+  .content-documents-image{
+    width:100%;
+  }
+
+  .audit-staff-headline{
+    grid-column: 1/span 12;
+    grid-row-start:36;
+  }
+
+  .audit-staff-content{
+    grid-column: 1/span 12;
+    grid-row-start:37;
+  }
+
+  .inventor-staff-list{
+    grid-column: 1/span 12;
+    grid-row-start:38;
+  }
+
+  .content-staff{
+    grid-column: 1/span 12;
+    grid-row-start:39;
+  }
+
+  .content-staff-image{
+    width:100%;
+  }
+
+  .audit-rss-headline{
+    grid-column: 1/span 12;
+    grid-row-start:40;
+  }
+
+  .audit-rss-content{
+    grid-column: 1/span 12;
+    grid-row-start:41;
+  }
+
+  .audit-rss-list{
+    grid-column: 1/span 12;
+    grid-row-start:42;
+  }
+
+  .content-rss{
+    grid-column: 1/span 12;
+    grid-row-start:43;
+  }
+
+  .content-rss-image{
+    width:100%;
+  }
+
+  .audit-news-headline{
+    grid-column: 1/span 12;
+    grid-row-start:44;
+  }
+
+  .audit-news-content{
+    grid-column: 1/span 12;
+    grid-row-start:45;
+  }
+
+  .audit-news-list{
+    grid-column: 1/span 12;
+    grid-row-start:46;
+  }
+
+  .content-news{
+    grid-column: 1/span 12;
+    grid-row-start:47;
+  }
+
+  .content-news-image{
+    width:100%;
+  }
+
+
+
+
+  /* Mobile content-audit Settings */
 
   @media screen and (max-width: 768px){
-    .content-audit{
-      Display: grid;
-      grid-gap:20px;
-      grid-template-columns: repeat(12,1fr);
-      grid-template-rows: repeat(19,auto);
-      max-width: 1366px;
-      margin-left: 25px;
-      margin-right: 25px;
-    }
-
-    .content-audit-headline{
-      grid-column: 1/span 12;
-      grid-row-start:1;
-    }
-
-
-    .documentation{
-      grid-column: 1/span 12;
-      grid-row-start:2;
-    }
-
-    .phase-1-introduction{
-      grid-column: 1/span 12;
-      grid-row-start:3;
-    }
-
-    .phase-1-functional-specifications-headline{
-      grid-column: 1/span 12;
-      grid-row-start:4;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-functional-specifications{
-      grid-column: 1/span 12;
-      grid-row-start:5;
-      text-align:center;
-    }
-
-    .phase-1-functional-specifications-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
-
-    .phase-1-functional-anotations-headline{
-      grid-column: 1/span 12;
-      grid-row-start:6;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-functional-anotations{
-      grid-column: 1/span 12;
-      grid-row-start:7;
-      text-align: center;
-    }
-
-    .phase-1-functional-anotations-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
-
-    .phase-1-wireframes-headline{
-      grid-column: 1/span 12;
-      grid-row-start:8;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-wireframes{
-      grid-column: 1/span 12;
-      grid-row-start:9;
-      text-align: center;
-    }
-
-    .phase-1-wireframes-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
-
-    .phase-1-communication{
-      grid-column: 1/span 12;
-      grid-row-start:10;
-    }
-
-    .phase-1-infrastructure-headline{
-      grid-column: 1/span 12;
-      grid-row-start:11;
-    }
-
-    .phase-1-infrastructure{
-      grid-column: 1/span 12;
-      grid-row-start:12;
-    }
-
-    .phase-1-sitemap-headline{
-      grid-column: 1/span 12;
-      grid-row-start:13;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-sitemap{
-      grid-column: 1/span 12;
-      grid-row-start:14;
-      text-align: center;
-    }
-
-    .phase-1-sitemap-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
-
-    .phase-1-full-layout-headline{
-      grid-column: 1/span 12;
-      grid-row-start:15;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-full-layout{
-      grid-column: 1/span 12;
-      grid-row-start:16;
-      text-align: center;
-    }
-
-    .phase-1-full-layout-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
-
-    .updating-phase-1-headline{
-      grid-column: 1/span 12;
-      grid-row-start:17;
-    }
-
-    .updating-phase-1{
-      grid-column: 1/span 12;
-      grid-row-start:18;
-    }
-
-    .phase-1-image-headline{
-      grid-column: 1/span 12;
-      grid-row-start:19;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    .phase-1-update{
-      grid-column: 1/span 12;
-      grid-row-start:20;
-      text-align: center;
-    }
-
-    .phase-1-update-image{
-      box-shadow: 0px 0px 19px -6px #000000;
-      width: 100%;
-    }
 
   }
 
 
 
-  /* Desktop phase2 setting*/
+  /* Desktop content-audit findings and recommendations setting*/
 
-  .phase-2{
+  .content-audit-findings-and-recommendations{
     Display: grid;
     grid-gap:20px;
     grid-template-columns: repeat(12,1fr);
