--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -342,7 +342,7 @@ margin-top: 50px;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   max-width: 1366px;
   margin:80px;
 }
@@ -394,6 +394,49 @@ margin-top: 50px;
   grid-column: 7/span 6;
   grid-row: 4/span 1;
 }
+
+.featured-work-2{
+  display:grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: auto auto auto auto;
+  grid-column: 1/span 12;
+  grid-row:4;
+  margin-bottom: 50px;
+}
+
+.featured-project-image-2{
+  grid-column: 1/span 6;
+  grid-row: 1/span 4;
+  box-shadow: 0px 0px 19px -6px #000000;
+  width: 100%;
+  height: auto;
+}
+
+.eyebrow-text-2{
+  grid-column: 7/span 6;
+  grid-row: 1/span 1;
+}
+
+.featured-project-title-2{
+  grid-column: 7/span 6;
+  grid-row: 2/span 1;
+}
+
+.featured-project-description-2{
+  grid-column: 7/span 6;
+  grid-row: 3/span 1;
+}
+
+.featured-work-2 button{
+  grid-column: 7/span 6;
+  grid-row: 4/span 1;
+}
+
+
+
+
+
 
 /*
 .additional-case-studies-headline{
@@ -557,7 +600,7 @@ margin-top: 50px;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows: auto auto auto;
   grid-column: 1/span 12;
-  grid-row: 4;
+  grid-row: 5;
   margin-bottom: 50px;
   background-color: #EBD7D0;
   padding:50px;
@@ -601,7 +644,7 @@ margin-top: 50px;
   .work{
     display:grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(5,1fr);
     grid-template-rows: auto auto auto;
     max-width: 768px;
     margin:25px;
@@ -660,13 +703,59 @@ margin-top: 50px;
     margin-top: 50px;
   }
 
+  .featured-work-2{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto auto auto;
+    grid-column: 1/span 4;
+    grid-row:4;
+    margin-bottom: 50px;
+  }
+
+  .featured-project-image-2{
+    grid-column: 1/span 4;
+    grid-row: 1/span 4;
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+    height: auto;
+  }
+
+  .eyebrow-text-2{
+    grid-column: 1/span 4;
+    grid-row: 5/span 1;
+    margin: 20 0 0 0;
+  }
+
+  .featured-project-title-2{
+    grid-column: 1/span 4;
+    grid-row: 6/span 1;
+    margin: 20 0 0 0;
+  }
+
+  .featured-project-description-2{
+    grid-column: 1/span 4;
+    grid-row: 7/span 1;
+    margin: 20 0 0 0;
+  }
+
+
+  .featured-work-2 button {
+    grid-column: 1/span 4;
+    grid-row: 8;
+    margin-top: 50px;
+  }
+
+
+
+
   .see-more-work{
     display: grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: auto auto auto auto;
     grid-column: 1/span 4;
-    grid-row: 4;
+    grid-row: 5;
     margin-bottom: 50px;
     background-color: #EBD7D0;
     padding:25px;
