--- a/styles/portfolio-2021-nih-specific.css
+++ b/styles/portfolio-2021-nih-specific.css
@@ -788,40 +788,280 @@ grid-row: 3/span 1;
     Display: grid;
     grid-gap:20px;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: auto auto;
+    grid-template-rows: auto;
     max-width: 1366px;
     margin:80px;
     margin-left: 20%;
     margin-right:20%;
   }
 
-  .phase-2-headline{
+  .content-audit-findings-headline{
     grid-column: 1/span 12;
     grid-row-start:1;
   }
 
-.inspiration-headline{
-  grid-column: 1/span 12;
-  grid-row-start:2;
-}
+  .audit-findings-list-headline{
+    grid-column: 1/span 12;
+    grid-row-start:2;
+  }
 
-.inspiration-intro{
-  grid-column: 1/span 12;
-  grid-row-start:3;
-}
+  .audit-findings-list{
+    grid-column: 1/span 12;
+    grid-row-start:3;
+  }
 
-.inspiration-chart{
-  grid-column: 3/span 8;
-  grid-row-start:4;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  text-align: center;
-}
+  .audit-recommendations-list-headline{
+    grid-column: 1/span 12;
+    grid-row-start:4;
+  }
 
-      .inspiration-point-1{
-        grid-column: 1;
-        margin-top: 20px;
-      }
+  .audit-recommendations-list{
+    grid-column: 1/span 12;
+    grid-row-start:5;
+  }
+
+  .detailed-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:6;
+  }
+
+  .page-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:7;
+  }
+
+  .page-findings{
+    grid-column: 1/span 12;
+    grid-row-start:8;
+  }
+
+  .page-findings-image{
+    width:100%;
+  }
+
+  .navigation-content-headline{
+    grid-column: 1/span 12;
+    grid-row-start:9;
+  }
+
+  .navigation-content-findings{
+    grid-column: 1/span 12;
+    grid-row-start:10;
+  }
+
+  .navigation-content-findings-image{
+    width: 100%
+  }
+
+  .navigation-content-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:11;
+  }
+
+  .page-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:12;
+  }
+
+  .page-findings{
+    grid-column: 1/span 12;
+    grid-row-start:13;
+  }
+
+  .page-findings-image{
+    width:100%;
+  }
+
+  .page-findings-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:14;
+  }
+
+  .abstract-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:15;
+  }
+
+  .abstract-findings{
+    grid-column: 1/span 12;
+    grid-row-start:16;
+  }
+
+  .abstract-findings-image{
+    width:100%;
+  }
+
+  .reviewing-abstrats-headline{
+    grid-column: 1/span 12;
+    grid-row-start:17;
+  }
+
+  .reviewing-abstracts-list{
+    grid-column: 1/span 12;
+    grid-row-start:18;
+  }
+
+  .reviewing-abstracts{
+    grid-column: 1/span 12;
+    grid-row-start:19;
+  }
+
+  .reviewing-abstracts-image{
+    width:100%;
+  }
+
+  .inventor-page-headline{
+    grid-column: 1/span 12;
+    grid-row-start:20;
+  }
+
+  .inventor-page-findings{
+    grid-column: 1/span 12;
+    grid-row-start:21;
+  }
+
+  .inventor-page-findings-image{
+    width:100%;
+  }
+
+  .reviewing-inventory-pages-headline{
+    grid-column: 1/span 12;
+    grid-row-start:22;
+  }
+
+  .reviewing-inventory-pages-list{
+    grid-column: 1/span 12;
+    grid-row-start:23;
+  }
+
+  .reviewing-inventory-pages{
+    grid-column: 1/span 12;
+    grid-row-start:24;
+  }
+
+  .reviewing-inventory-pages-image{
+    width:100%;
+  }
+
+  .reviewing-inventory-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:25;
+  }
+
+  .product-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:26;
+  }
+
+  .product-findings-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:27;
+  }
+
+  .product-findings-list{
+    grid-column: 1/span 12;
+    grid-row-start:28;
+  }
+
+  .document-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:29;
+  }
+
+  .documnent-findings{
+    grid-column: 1/span 12;
+    grid-row-start:30;
+  }
+
+  .document-findings-image{
+    width:100%;
+  }
+
+  .document-findings-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:31;
+  }
+
+  .rss-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:32;
+  }
+
+  .rss-findings{
+    grid-column: 1/span 12;
+    grid-row-start:33;
+  }
+
+  .rss-findings-image{
+    width:100%;
+  }
+
+  .rss-findings-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:34;
+  }
+
+  .multimedia-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:35;
+  }
+
+  .multimedia-findings{
+    grid-column: 1/span 12;
+    grid-row-start:36;
+  }
+
+  .multimedia-findings-image{
+    width:100%;
+  }
+
+  .multimedia-findings-recommendation{
+    grid-column: 1/span 12;
+    grid-row-start:37;
+  }
+
+  .global-navigation-findings-headline{
+    grid-column: 1/span 12;
+    grid-row-start:38;
+  }
+
+  .navigation-findings-content{
+    grid-column: 1/span 12;
+    grid-row-start:39;
+  }
+
+  .current-experience-headline{
+    grid-column: 1/span 12;
+    grid-row-start:40;
+  }
+
+  .current-experience-list{
+    grid-column: 1/span 12;
+    grid-row-start:41;
+  }
+
+  .opportunities-for-improvement-headline{
+    grid-column: 1/span 12;
+    grid-row-start:42;
+  }
+
+  .opportunties-for-improvement-list{
+    grid-column: 1/span 12;
+    grid-row-start:43;
+  }
+
+  .next-steps-after-audit-headline{
+    grid-column: 1/span 12;
+    grid-row-start:44;
+  }
+
+  .next-steps-after-audit-intro{
+    grid-column: 1/span 12;
+    grid-row-start:45;
+  }
+
+
+
 
       .inspiration-point-2{
         grid-column: 2;
